# rag-template

./: .env.example  .gitignore  docker-compose.yml
.claude/: settings.json
.claude/agents/: coding-agent.md  project-manager.md  project-planner.md  (+2 more)
plans/: backend-init-plan.md  backend-init-plan.review.md  backend-plan-1.review.md  backend-plan-2.review.md  import-init-plan.md  import-plan-1.review.md  import-plan-2.review.md  infra-init-plan.md  infra-init-plan.review.md  init-plan.md  init-scaffolds.review.md  opensearch-init-plan.md  opensearch-plan.review.md
scripts/: agents.py  plan_parser.py  requirements.txt  workflow.py
systems/backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
systems/backend/rag_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
systems/backend/src/: config.py  main.py  models.py
systems/backend/src/api/: config_endpoint.py  health.py  query.py  router.py
systems/backend/src/dependencies/: query.py
systems/backend/src/exceptions/: domain.py  handlers.py
systems/backend/src/middleware/: auth.py  logging_middleware.py
systems/backend/src/providers/: embedder.py  llm_provider.py  opensearch_provider.py
systems/backend/src/schemas/: common.py  query.py
systems/backend/src/services/: query_service.py
systems/backend/tests/: conftest.py  test_health.py
systems/backend/tests/integration/: conftest.py  test_query_endpoint.py
systems/backend/tests/integration/fixtures/: chunks.json
systems/backend/tests/unit/: test_auth_middleware.py  test_config_endpoint.py  test_embedder.py  test_llm_provider.py  test_logging_middleware.py  test_opensearch_provider.py  test_query_route.py  test_query_service.py  test_schemas.py
systems/import/: .env.example  CLAUDE.md  Dockerfile  ingest.py  pyproject.toml
systems/import/src/: chunker.py  cleaner.py  config.py  embedder.py  indexer.py  loader.py  models.py
systems/import/src/providers/: opensearch_provider.py
systems/import/storage/opensearch/rag-chunks/: mappings.json  settings.json
systems/import/storage/opensearch/rag_index/: mappings.json  settings.json
systems/import/tests/: test_cli.py
systems/import/tests/fixtures/: sample.md  sample.txt
systems/import/tests/integration/: conftest.py  test_ingest_pipeline.py
systems/import/tests/integration/fixtures/: sample.txt
systems/import/tests/unit/: test_chunker.py  test_cleaner.py  test_embedder.py  test_indexer.py  test_loader.py  test_models.py  test_opensearch_provider.py
(+11 files in other folders)
