[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-import"
version = "0.1.0"
description = "RAG Template — Python Data Import pipeline for ingesting documents into OpenSearch"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.3.0",
    "opensearch-py>=2.6.0",
    "openai>=1.35.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "langchain-core>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "sentence-transformers>=3.0.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "testcontainers>=4.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require Docker and a running OpenSearch container",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
python_version = "3.11"

[dependency-groups]
dev = [
    "vulture>=2.16",
]
